--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,7 +3,8 @@ body {
   margin: 0;
   padding: 0;
   width: 100vw;
-  background-color: #ebc7c7;
+  background-color: #f0cec9;
+  color: white;
   font-family: 'Oswald';
   position: relative;
 }
@@ -45,7 +46,8 @@ body {
 
 .wrapper .logo {
   font-size: 20px;
-  padding: 15px 0 0 0;
+  padding-top: 15px;
+  color: black;
 }
 
 .nav {
@@ -55,6 +57,7 @@ body {
   left: -30vw;
   height: 100vh;
   background-color: white;
+  color: black;
   -webkit-transition: -webkit-transform 0.4s;
   transition: -webkit-transform 0.4s;
   transition: transform 0.4s;
@@ -84,12 +87,12 @@ body {
   content: "";
   width: 3vw;
   height: 2px;
-  background-color: black;
   position: absolute;
   top: 50%;
   left: -50%;
   -webkit-transition: 0.5s;
   transition: 0.5s;
+  background-color: black;
 }
 
 .nav .navlink:hover:before {
@@ -99,7 +102,7 @@ body {
 .nav .divider {
   height: 1px;
   width: 40px;
-  background-color: rgba(0, 0, 0, 0.452);
+  background-color: black;
   margin: 30px 0;
 }
 
@@ -118,6 +121,7 @@ body {
   display: flex;
   margin: 0 0 0 750px;
   padding-top: 15px;
+  color: black;
 }
 
 .small-content .smalltrack-art {
@@ -147,7 +151,7 @@ body {
   font-size: 20px;
   padding: 15px 0 0 10px;
   margin-left: 10px;
-  color: rgba(58, 57, 57, 0.89);
+  color: black;
 }
 
 .small-content .navigation .btn:focus, .small-content .navigation .list-icon:focus {
@@ -170,18 +174,32 @@ body {
 
 .bigtext {
   margin: 0 500px;
-  z-index: 1;
+  z-index: 2;
   cursor: pointer;
 }
 
 .bigtext .text {
-  color: white;
   font-size: 100px;
   font-weight: 100;
   letter-spacing: 10px;
 }
 
-.line {
+.bigtext .playbtn {
+  font-size: 50px;
+  position: absolute;
+  color: #0f0f0f;
+  top: 70%;
+  left: 46.9%;
+  opacity: 0;
+  -webkit-transition: opacity 0.5s linear;
+  transition: opacity 0.5s linear;
+}
+
+.bigtext .playbtn:hover {
+  opacity: 1;
+}
+
+.centerline {
   width: 2px;
   height: 80px;
   background-color: white;
@@ -195,7 +213,13 @@ body {
   z-index: -9;
 }
 
-.wavecontainer .wave {
+.wavecontainer .one {
+  background-color: rgba(50, 29, 73, 0.808);
+  position: absolute;
+  top: 0%;
+  z-index: 4;
+  left: -30%;
+  animation: rotate 10s ease-out 0s reverse infinite;
   width: 150vw;
   height: 300%;
   border-radius: 50%;
@@ -203,30 +227,31 @@ body {
           transform-origin: 50% 49%;
 }
 
-.wavecontainer .one {
-  background-color: rgba(50, 29, 73, 0.767);
-  position: absolute;
-  top: 0%;
-  z-index: 4;
-  left: -30%;
-  animation: rotate 10s ease-out 0s reverse infinite;
-}
-
 .wavecontainer .two {
-  background-color: rgba(17, 168, 156, 0.527);
+  background-color: rgba(17, 168, 155, 0.815);
   position: absolute;
   top: -2%;
   left: -15%;
   animation: rotate 10s linear 4s reverse infinite;
+  width: 150vw;
+  height: 300%;
+  border-radius: 50%;
+  -webkit-transform-origin: 50% 49%;
+          transform-origin: 50% 49%;
 }
 
 .wavecontainer .three {
-  background-color: rgba(207, 41, 41, 0.596);
+  background-color: rgba(206, 63, 63, 0.808);
   position: absolute;
   top: -4%;
   left: -22%;
   z-index: -3;
   animation: rotate 10s ease-out 7s reverse infinite;
+  width: 150vw;
+  height: 300%;
+  border-radius: 50%;
+  -webkit-transform-origin: 50% 49%;
+          transform-origin: 50% 49%;
 }
 
 @-webkit-keyframes rotate {
@@ -254,7 +279,7 @@ body {
 .modal {
   display: none;
   z-index: 1;
-  background-color: rgba(71, 70, 70, 0.329);
+  background-color: rgba(17, 17, 17, 0.774);
   width: 90vw;
   min-width: 100%;
   height: 100vh;
@@ -424,7 +449,7 @@ body {
 }
 
 .playlists .playlist-box:hover {
-  background-color: rgba(233, 218, 201, 0.267);
+  background-color: rgba(71, 71, 71, 0.267);
 }
 
 .playlists .pl-image {
