--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,7 +4,8 @@ body {
    margin: 0;
    padding: 0;
    width: 100vw;
-   background-color: rgb(235, 199, 199);
+   background-color: #f0cec9;
+   color:white;
    font-family: 'Oswald';
   position: relative;
  
@@ -17,9 +18,17 @@ body {
 @mixin ham12 {
     width: 25px;
     height: 3px;
-    background-color: black;
+    background-color:  black;
     margin-top: 3px;
 }
+
+@mixin wave{
+    width: 150vw;
+    height: 300%;
+    border-radius: 50%;
+    transform-origin: 50% 49%;
+}
+
 
 .wrapper{
     display: flex;
@@ -39,29 +48,15 @@ body {
             background-color: black;
             margin-top: 3px;
         }
-
-        // &.expand .ham3{
-        //     background-color: transparent;
-        //     margin-top: 30px;
-        // }
-
-       
-
-        // &.expand .ham1{
-        //     transform: rotate(45deg);
-        // }
-
-        // &.expand .ham2{
-        //     transform: rotate(-45deg);
-        // }
-
+        
         &:hover{
             opacity: 0.5;
         }
     }
     .logo{
         font-size: 20px;
-        padding: 15px 0 0 0;
+        padding-top: 15px;
+        color: black;
     }
 }
 
@@ -72,6 +67,7 @@ body {
     left: -30vw;
     height: 100vh;
     background-color: white;
+    color: black;
     transition: transform 0.4s;
     z-index: 1;
 
@@ -81,8 +77,8 @@ body {
 
     ul{
         list-style: none;
-       padding:10% 0 0 15%;
-       cursor: pointer;
+        padding:10% 0 0 15%;
+        cursor: pointer;
     }
     .navlink{
        font-size: 2rem;
@@ -95,11 +91,11 @@ body {
            content: "";
            width: 3vw;
            height: 2px;
-           background-color: black;
            position: absolute;
            top: 50%;
           left: -50% ;
           transition: 0.5s;
+         background-color: black;
        }
     }
 
@@ -111,7 +107,7 @@ body {
     .divider{
         height: 1px;
         width: 40px;
-        background-color: rgba(0, 0, 0, 0.452);
+        background-color: black;
         margin:30px 0 ;
     }
 
@@ -129,6 +125,7 @@ body {
     display: flex;
     margin: 0 0 0 750px;
     padding-top: 15px;
+    color: black;
 
     .smalltrack-art{
         background-image: url("https://images.unsplash.com/photo-1548923429-355d6c561385?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mnx8YWxidW0lMjBjb3ZlciUyMGFydHxlbnwwfDF8MHxyZWQ%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60");
@@ -142,6 +139,8 @@ body {
             opacity: 0.6;
         }
     }
+
+
     .line{
         width: 1px;
         height: 40px;
@@ -159,7 +158,7 @@ body {
           font-size: 20px;
           padding: 15px 0 0 10px;
           margin-left: 10px;
-          color: rgba(58, 57, 57, 0.89);
+          color:black;
 
 
           &:focus{
@@ -183,18 +182,33 @@ body {
 
 .bigtext{
   margin: 0 500px;
-   z-index: 1;
+   z-index: 2;
    cursor: pointer;
  
     .text{
-        color: white;
         font-size: 100px;
         font-weight: 100;
         letter-spacing: 10px;
     }
+
+    .playbtn{
+        font-size: 50px;
+        position: absolute;
+        color: rgb(15, 15, 15);
+        top: 70%;
+        left: 46.9%;
+        opacity: 0;
+        transition: opacity 0.5s linear;
+
+       &:hover{
+           opacity: 1;
+       }
+    }
+
 }
 
-.line{
+
+.centerline{
     width: 2px;
     height: 80px;
     background-color: white;
@@ -205,60 +219,58 @@ body {
     width: 300vw;
     height: 100%;
     position: fixed;
-   //overflow: hidden;
-   z-index: -9;
-      
-     .wave{
-        width: 150vw;
-        height: 300%;
-        border-radius: 50%;
-        transform-origin: 50% 49%;
-      }
+    z-index: -9;
+    
 
-     .one{
-            background-color: rgba(50, 29, 73, 0.767);
-            position: absolute;
-            top:0%;
-            z-index: 4;
-            left: -30%;
-            animation: rotate 10s ease-out 0s reverse infinite ;
-        }
-        .two{
-            background-color: rgba(17, 168, 156, 0.527);
-            position: absolute;
-            top: -2%;
-            left:-15%;
-            animation: rotate 10s linear 4s reverse infinite ;
-        }
-        .three{
-            background-color: rgba(207, 41, 41, 0.596);
-            position: absolute;
-             top: -4%;
-             left: -22%;
-            z-index: -3;
-            animation: rotate 10s ease-out 7s reverse infinite ;
+    .one{
+        background-color: rgba(50, 29, 73, 0.808);
+        position: absolute;
+        top:0%;
+        z-index: 4;
+        left: -30%;
+        animation: rotate 10s ease-out 0s reverse infinite ;
+        @include wave();
+    }
+    .two{
+        background-color: rgba(17, 168, 155, 0.815);
+        position: absolute;
+        top: -2%;
+        left:-15%;
+        animation: rotate 10s linear 4s reverse infinite ;
+        @include wave();
+    }
+    .three{
+        background-color: rgba(206, 63, 63, 0.808);
+        position: absolute;
+        top: -4%;
+        left: -22%;
+        z-index: -3;
+        animation: rotate 10s ease-out 7s reverse infinite ;
+        @include wave();
+    }
+
+    @keyframes rotate {
+
+        from{
+            transform: rotate(0);
         }
 
-        @keyframes rotate {
-            from{
-                transform: rotate(0);
-            }
-            to{
-                transform: rotate(360deg);
-            }
+        to{
+            transform: rotate(360deg);
         }
+    }
 }
 
 .modal{
     display: none;
     z-index: 1;
-    background-color: rgba(71, 70, 70, 0.329);
+    background-color: rgba(17, 17, 17, 0.774);
     width: 90vw;
     min-width: 100%;
     height: 100vh;
     position: absolute;
     top: 0;
-   overflow: hidden;  
+    overflow: hidden;  
 
    
 }
@@ -275,12 +287,10 @@ body {
            to{ left: 50%;}
     }
 
-   
-    
     .player{
        width: 100%;
        height: 50vh;
-       background-color: pink;
+       background-color:pink;
     }
 
     .top{
@@ -394,7 +404,7 @@ body {
         cursor: pointer;
 
         &:hover{
-            background-color: rgba(233, 218, 201, 0.267);
+            background-color: rgba(71, 71, 71, 0.267);
         }
     }
     .pl-image{
